partial/force-app/main/default/objects/View_Interest__c/View_Interest__c.object-meta.xml
<CustomObject>
    <label>View Interest</label>
    <nameField>
        <label>View Interest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>View Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>