partial/force-app/main/default/objects/View_Interest__c/fields/DXF_SF_Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>DXF_SF_Unit_Id__c</fullName>
    <label>DXF_SF_Unit_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>