partial/force-app/main/default/objects/View_Interest__c/fields/Expected_Move_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Move_in_Date__c</fullName>
    <label>Expected Move in Date</label>
    <type>Date</type>
</CustomField>