partial/force-app/main/default/objects/View_Interest__c/fields/How_flexible_are_you__c.field-meta.xml
<CustomField>
    <fullName>How_flexible_are_you__c</fullName>
    <label>How flexible are you?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Notify me the similar Properties nearby</fullName>
            </value>
            <value>
                <fullName>Only show me the exact matches</fullName>
            </value>
            <value>
                <fullName>I would consider broadening my search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>