partial/force-app/main/default/objects/View_Interest__c/fields/Interest_Age__c.field-meta.xml
<CustomField>
    <fullName>Interest_Age__c</fullName>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>