partial/force-app/main/default/objects/View_Interest__c/fields/Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Type__c</fullName>
    <label>Interest Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buying</fullName>
            </value>
            <value>
                <fullName>Selling</fullName>
            </value>
            <value>
                <fullName>Letting</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
            <value>
                <fullName>Valuation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>