partial/force-app/main/default/objects/View_Interest__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>View Interests</relationshipLabel>
    <relationshipName>View_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>