partial/force-app/main/default/objects/View_Interest__c/fields/Lead_DB_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_DB_Id__c</fullName>
    <description>This fields has been created to capture the External Id</description>
    <label>Web_Lead_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>