partial/force-app/main/default/objects/View_Interest__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>London Lane, E8</fullName>
            </value>
            <value>
                <fullName>london</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>