partial/force-app/main/default/objects/View_Interest__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>View Interests</relationshipLabel>
    <relationshipName>View_Interests1</relationshipName>
    <type>Lookup</type>
</CustomField>