partial/force-app/main/default/objects/View_Interest__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>View Interests</relationshipLabel>
    <relationshipName>View_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>