partial/force-app/main/default/objects/View_Interest__c/fields/Price_Range_Min__c.field-meta.xml
<CustomField>
    <fullName>Price_Range_Min__c</fullName>
    <label>Price Range Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>