partial/force-app/main/default/objects/View_Interest__c/fields/Property_Interested__c.field-meta.xml
<CustomField>
    <fullName>Property_Interested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Interested</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>View Interests</relationshipLabel>
    <relationshipName>View_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>