partial/force-app/main/default/objects/View_Interest__c/fields/Property_Size_Max__c.field-meta.xml
<CustomField>
    <fullName>Property_Size_Max__c</fullName>
    <label>Property Size Max</label>
    <length>15</length>
    <type>Text</type>
</CustomField>