partial/force-app/main/default/objects/View_Interest__c/fields/Property_Size_Min__c.field-meta.xml
<CustomField>
    <fullName>Property_Size_Min__c</fullName>
    <label>Property Size Min</label>
    <length>15</length>
    <type>Text</type>
</CustomField>