partial/force-app/main/default/objects/View_Interest__c/fields/Request_for_mortgage_advice__c.field-meta.xml
<CustomField>
    <fullName>Request_for_mortgage_advice__c</fullName>
    <label>Request for mortgage advice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First time buyer mortgage</fullName>
            </value>
            <value>
                <fullName>Remortgaging (barrow more/save money)</fullName>
            </value>
            <value>
                <fullName>Moving home</fullName>
            </value>
            <value>
                <fullName>Buying to let</fullName>
            </value>
            <value>
                <fullName>Buying in the UK whilst living overseas</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>