partial/force-app/main/default/objects/View_Interest__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Property Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>