partial/force-app/main/default/objects/View_Interest__c/fields/Swimingpool__c.field-meta.xml
<CustomField>
    <fullName>Swimingpool__c</fullName>
    <label>Swimingpool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>