partial/force-app/main/default/objects/View_Interest__c/fields/Tenure_Details__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Details__c</fullName>
    <label>Tenure Details (For how long)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Preference</fullName>
            </value>
            <value>
                <fullName>6 Months+</fullName>
            </value>
            <value>
                <fullName>Up to 6 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>