partial/force-app/main/default/objects/View_Interest__c/fields/Terrace__c.field-meta.xml
<CustomField>
    <fullName>Terrace__c</fullName>
    <label>Terrace</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>