partial/force-app/main/default/objects/View_Interest__c/fields/Unit_Interested__c.field-meta.xml
<CustomField>
    <fullName>Unit_Interested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Interested</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>View Interests</relationshipLabel>
    <relationshipName>View_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>