partial/force-app/main/default/objects/View_Interest__c/fields/Valuer_Contacted_Yes__c.field-meta.xml
<CustomField>
    <fullName>Valuer_Contacted_Yes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valuer Contacted Yes?</label>
    <type>Checkbox</type>
</CustomField>