partial/force-app/main/default/objects/View_Interest__c/fields/Would_you_like_get_Email_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_get_Email_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Would you like get Email Alerts?</label>
    <type>Checkbox</type>
</CustomField>