partial/force-app/main/default/objects/View_Interest__c/listViews/Interest_Queue_View_Interest.listView-meta.xml
<ListView>
    <fullName>Interest_Queue_View_Interest</fullName>
    <filterScope>Queue</filterScope>
    <label>Interest Queue</label>
    <queue>Interest_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>